# rustboost

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: config.rs  lib.rs  main.rs  rustboost.rs  types.rs  utils.rs
src/dataset/: libsvm_parser.rs  mod.rs
src/loss/: gini.rs  mod.rs  mse.rs
src/tests/: loss_tests.rs
src/tree/: cart.rs  mod.rs  node.rs
tests/: README.md
tests/functional/: generate_data.py  load_data.py
