[package]
name = "rustboost"
version = "0.1.2"
authors = ["MoonL1ght <ixav1@icloud.com>"]
edition = "2018"
license = "MIT, APACHE"

[dependencies]
clap = "2.32.0"
rand = "0.5.5"
num = "0.2.0"
env_logger = "0.6.1"
log = "0.4"
libsvm_parser = { path = "/Users/Alexander/Develop/rusty-sci/libsvm-parser", version = "0.1.1" }

[dev-dependencies]
pretty_assertions = "0.4.0"